--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   get: ^4.6.6
   go_router: ^13.2.1
   google_fonts: ^6.2.1
+  hive_flutter: ^1.1.0
   url_strategy: ^0.2.0
 
 dev_dependencies:
