--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "request": "launch",
             "flutterMode": "debug",
             "program": "lib/main.dart",
-            "args": ["-d", "chrome", "--web-port", "8000"]
+            "args": ["-d", "chrome", "--web-port", "8000", "--dart-define-from-file", ".env"]
         }
     ]
 }
