--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_auth: ^5.0.0
   firebase_core: ^3.0.0
+  firebase_messaging: ^15.1.0
   flutter:
     sdk: flutter
   flutter_spinkit: ^5.2.1
